--- a/index.html
+++ b/index.html
@@ -1,10 +1,52 @@
 <html>
 
 <head>
-    <title>aaaaaaaaaaaaaaaaaaaaa</title>
+    <title>JampGame</title>
 </head>
 
 <body>
-    ここに内容を書くaaaaaaaaaaaaaaaa
+    /*Arduino Leonardo でのみ動きます*/
+/*ツール → ボード → Arduino Leonardo*/
+
+/*キーボードのライブラリ*/
+#include <Keyboard.h>
+
+int a = 0;
+
+void setup()
+{
+  /*D2ピン使用（D2~D13の中から1つ選ぶ）*/
+  pinMode(2, INPUT);
+
+  Keyboard.begin();
+}
+
+void loop()
+{
+  /*  ↑ キー押したとき*/
+  if ( (a == 0) && (digitalRead(2) == 0) ) {
+    Keyboard.write(0xDA);
+    Keyboard.releaseAll();
+    a = 1;
+    delay(5);
+  }
+  /*  ↑ キー離したとき*/
+  if ((a == 1) && (digitalRead(2) == 1)) {
+    Keyboard.releaseAll();
+    a = 0;
+    delay(5);
+  }
+}
+
+/*ハード側の配線*/
+//Aruduino側→5V,GND,D2ピン使用
+//
+//スイッチ→5V
+//  ↓
+//  ↓→D2ピン
+//  ↓
+//　抵抗
+//  ↓
+//  GND
 </body>
 </html>
