--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ int a = 0;<br>
 <br>
 void setup()<br>
 {<br>
-  &nbsp;/*D2ピン使用（D2~D13の中から1つ選ぶ）*/<br>
+  /*D2ピン使用（D2~D13の中から1つ選ぶ）*/<br>
   pinMode(2, INPUT);<br>
 <br>
   Keyboard.begin();<br>
@@ -24,8 +24,7 @@ void setup()<br>
 void loop()<br>
 {<br>
   /*  ↑ キー押したとき*/<br>
-  <span
-  >if ( (a == 0) && (digitalRead(2) == 0) ) {<br>
+  <span class="mrg-10">if ( (a == 0) && (digitalRead(2) == 0) ) {</span>><br>
     Keyboard.write(0xDA);<br>
     Keyboard.releaseAll();<br>
     a = 1;<br>
