--- a/index.html
+++ b/index.html
@@ -49,9 +49,12 @@ void loop()<br>
 //  ↓<br>
 //  GND<br>
 </body>
+
 <css>
-    .mgr-10{
+    mgr-10
+    {
         margin right : 10px;
     }
 </css>
+
 </html>
