2019学祭ジャンプゲーム

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 /*ツール → ボード → Arduino Leonardo*/<br>
 <br>
 /*キーボードのライブラリ*/<br>
-#include <Keyboard.h><br>
+#include &lt;Keyboard.h&gt;<br>
 <br>
 int a = 0;<br>
 <br>
